<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scan_food" />
        <item
            android:id="@+id/nav_safe_foods"
            android:icon="@drawable/ic_safe"
            android:title="@string/safe_foods" />
        <item
            android:id="@+id/nav_dangerous_foods"
            android:icon="@drawable/ic_danger"
            android:title="@string/dangerous_foods" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>

</menu>
