<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="productViewModel"
            type="eu.captaincode.allergywatch.viewmodel.ProductViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="356dp"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/product_image_description"
                android:scaleType="fitCenter"
                app:imageUrl="@{productViewModel.product.imageFrontUrl}"
                app:layout_constraintDimensionRatio=""
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/hazelnuts" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_product_name" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@{productViewModel.product.productName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_product"
                tools:text="Nutella" />

            <TextView
                android:id="@+id/tv_ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ingredients_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="@+id/tv_product_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{productViewModel.product.ingredientsText}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_ingredients_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_title"
                tools:text="@string/ingredients_mock" />

            <View
                android:id="@+id/separator_view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/divider"
                android:backgroundTint="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredients" />

            <TextView
                android:id="@+id/tv_allergens_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/allergens_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="@+id/tv_ingredients"
                app:layout_constraintTop_toBottomOf="@+id/separator_view" />

            <TextView
                android:id="@+id/tv_allergens"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{productViewModel.product.allergensFromIngredients}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_allergens_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_allergens_title"
                tools:text="@string/allergens_mock" />


            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@{productViewModel.product.quantity}"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_product_name"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="850g" />

            <Button
                android:id="@+id/btn_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAccent"
                android:minWidth="150dp"
                android:text="@string/safe_button"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/btn_dangerous"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_allergens" />

            <Button
                android:id="@+id/btn_dangerous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:minWidth="150dp"
                android:text="@string/dangerous_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_safe"
                app:layout_constraintTop_toTopOf="@+id/btn_safe" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>